tests/reference/asr-test_pow1-581ef42.stderr
style suggestion: Could have used '**' instead of 'pow'
 --> tests/errors/test_pow1.py:4:11
  |
4 |     print(pow(x,3))
  |           ^^^^^^^^ '**' could be used instead

semantic error: Arguments do not match for any generic procedure, pow
 --> tests/errors/test_pow1.py:4:11
  |
4 |     print(pow(x,3))
  |           ^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
